<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mainFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home_title_menu" />
    <item
        android:id="@+id/operationsFragment"
        android:icon="@drawable/ic_operations"
        android:title="@string/operations_title_menu" />
    <item
        android:id="@+id/placeHolder"
        android:enabled="false"
        android:title="" />
    <item
        android:id="@+id/graphsFragment"
        android:icon="@drawable/ic_graphs"
        android:title="@string/graphs_title_menu" />
    <item
        android:id="@+id/categoriesFragment"
        android:icon="@drawable/ic_categoris"
        android:title="@string/categories_title_menu" />
</menu>