<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".ui.registration.RegistrationFragment">

    <TextView
        style="@style/title_logging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_logging_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/registration_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/background_inputs_logging"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email_editText"
                style="@style/logging_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email_24"
                android:hint="@string/email_default_hint"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password_editText"
                style="@style/logging_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_password_24"
                android:hint="@string/password_default_hint"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/repeat_password_editText"
                style="@style/logging_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_password_24"
                android:hint="@string/repeat_password_default_hint"
                android:inputType="textPassword" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Sign Up"
                android:textAllCaps="false" />
        </LinearLayout>

        <ImageView
            style="@style/image_into_logging"
            android:src="@drawable/ic_edit"
            app:layout_anchor="@id/registration_linearLayout"
            app:layout_anchorGravity="center|top" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.constraintlayout.widget.ConstraintLayout>