<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_white"
    tools:context=".ui.addOperation.AddOperationFragment">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/balance_navigationView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:backgroundTint="@color/transparent"
        app:elevation="0dp"
        app:itemTextAppearanceActive="@style/BottomNavigationView.Active"
        app:itemTextAppearanceInactive="@style/BottomNavigationView"
        app:labelVisibilityMode="labeled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/main_balance_menu" />

    <LinearLayout
        android:id="@+id/money_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/balance_navigationView">

        <EditText
            android:id="@+id/input_money_editText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/input_money_default_hint"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency_default_name" />
    </LinearLayout>

    <TextView
        android:id="@+id/account_default_name"
        style="@style/default_name_in_operation"
        android:text="@string/account_default_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/money_ll" />

    <TextView
        android:id="@+id/current_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="3dp"
        android:text="Main"
        android:textColor="@color/less_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_default_name" />

    <TextView
        android:id="@+id/categories_default_name"
        style="@style/default_name_in_operation"
        android:text="@string/categories_default_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_account" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categories_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categories_default_name"
        tools:listitem="@layout/categories_item" />

    <LinearLayout
        android:id="@+id/dates_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categories_recyclerView">

        <TextView
            android:id="@+id/today_date_textView"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="06.08\nсегодня" />

        <TextView
            android:id="@+id/yesterday_date_textView"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:text="05.08\nвчера" />

        <TextView
            android:id="@+id/selected_date_textView"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:text="03.08\nвыбранная" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/select_date_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ic_calendar_24"
        app:backgroundTint="@color/white"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@id/dates_ll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/dates_ll" />


    <Button
        android:id="@+id/add_operation_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="Add"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>