<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_white"
    tools:context=".ui.addCategory.AddCategoryFragment">

    <EditText
        android:id="@+id/category_title_editText"
        android:layout_width="200dp"
        android:hint="@string/default_hint_title_of_category"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/balance_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_title_editText">

        <RadioButton
            android:id="@+id/income_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/income_title_menu" />

        <RadioButton
            android:id="@+id/expanse_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/expenses_title_menu" />

    </RadioGroup>

    <TextView
        android:id="@+id/default_icon_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="Icons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/balance_radioGroup" />

    <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
        android:id="@+id/multi_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/default_icon_title_textView"
        app:msrv_gravity="start"
        app:msrv_interval="4"
        app:msrv_speed_ms_per_inch="100" />

    <!--    <androidx.viewpager2.widget.ViewPager2-->
    <!--        android:id="@+id/viewPager"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/default_icon_title_textView" />-->

<!--    <com.google.android.material.tabs.TabLayout-->
<!--        android:id="@+id/tabLayout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@color/transparent"-->
<!--        android:translationY="16dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/multi_recyclerView"-->
<!--        app:tabBackground="@drawable/viewpager_indicators"-->
<!--        app:tabIndicatorHeight="0dp" />-->

    <TextView
        android:id="@+id/default_colors_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="Color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/multi_recyclerView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_color_fab"
        android:layout_width="wrap_content"
        app:backgroundTint="@color/blue_gray"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="6dp"
        android:src="@drawable/ic_add"
        app:fabSize="mini"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/default_colors_textView" />

    <Button
        android:id="@+id/add_category_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="Add"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>